--- a/urlpreview/base-config.yaml
+++ b/urlpreview/base-config.yaml
@@ -6,6 +6,13 @@ json_max_char: 2000
 max_links: 3
 min_image_width: 475
 max_image_embed: 300
+html_custom_title_style: '' #'font-size: medium; padding-bottom: 8px; line-height:1.1; margin-bottom: 5px;'
+html_custom_description_style: '' # 'font-size: small; font-style: oblique; line-height: 1; padding-bottom: 8px; margin-bottom: 8px; padding-top:1px; margin-top:2px;'
+html_custom_image_style: '' #'max-height: 60px;'
+respond_instead_of_reply: True
+use_divtag_instead_of_htag_for_title: True
+use_divtag_instead_of_ptag_for_description: True
+indent_description: True
 no_results_react: 💨
 url_blacklist:
   - ':\/\/matrix\.to\/'
